# pexip-transcoder-client

./: .gitignore  README.md  publish.sh  pyproject.toml
pexip/: __init__.py  __main__.py  client.py  config.py  core.py  definitions.py  exceptions.py  models.py  utils.py
pexip/cli/: argparser.py  args.py  definitions.py
tests/: __init__.py  test_create.py
