[tool.poetry]
name = "pexip"
version = "0.2.4"
description = "Simple CLI utility to manually provision a Pexip Transcoder Client."
authors = ["Colin Bruner <colin.d.bruner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
neovim = "^0.3.1"
pytest-httpserver = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pexip = "pexip.__main__:main"
